+91 alignment bug fix

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/swach/index.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/swach/index.scss
@@ -12,6 +12,9 @@
   color: red;
   font-weight: bold;
 }
+.numberdisplay{
+  display: flex !important;
+}
   .image-card .card {
     width: 540px;
   }
